<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="send_as_email">Send as email</string>
    <string name="textview">TextView</string>
    <string name="action_next">Next</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="menu_import">Import</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communications">Communications</string>
    <string name="Notes">notes</string>
    <string name="Courses">courses</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="note_text_hint">Note text</string>
    <string name="note_title_hint">Note title</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough?</string>
    <string name="nav_send_message">Ok send</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications_header">Notifications</string>

</resources>
